--- a/Module-6/Capstone/Miru-frontend/package.json
+++ b/Module-6/Capstone/Miru-frontend/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
+    "axios": "^1.6.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "dotenv": "^16.0.1",
@@ -17,7 +17,7 @@
     "react-icons": "^4.3.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
